--- a/LANCED/config_files/kismet.conf
+++ b/LANCED/config_files/kismet.conf
@@ -1,4 +1,4 @@
-# Kismet config file modified for Zulfikar with two TP-LINK TL-WN722N wireless NICs and a pl2303 GPS module.
+# Kismet config file modified for lanced with two TP-LINK TL-WN722N wireless NICs and a pl2303 GPS module.
 
 
 
@@ -15,7 +15,7 @@ version=2009-newcore
 # servername=Kismet Server
 
 # Prefix of where we log (as used in the logtemplate later)
-logprefix=/home/pi/zulfi_logs
+logprefix=/home/pi/lanced_logs
 
 # Do we process the contents of data frames?  If this is enabled, data
 # frames will be truncated to the headers only immediately after frame type
