--- a/LANCED/config_files/hostapd.conf
+++ b/LANCED/config_files/hostapd.conf
@@ -11,5 +11,5 @@ auth_algs=1
 ignore_broadcast_ssid=0
 wpa=2
 wpa_key_mgmt=WPA-PSK
-wpa_passphrase=zulf1k@r
+wpa_passphrase=l@nced
 rsn_pairwise=CCMP
